--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                             </div>
                             <div class="pl-5 card-body">
                                 <h4 class="card-title my-4">Nhập vào thông tin cá nhân</h4>
-                                <div class="row col-md-12 my-5 mx-0 p-0">
+                                <div class="row my-5 mx-0 p-0">
                                     <input id="txtFullName" class="form-control mr-3 col-md-3" type="text"
                                         placeholder="Họ và Tên">
                                     <input id="txtTotalEarning" class="form-control mr-3 col-md-3" type="number"
@@ -135,12 +135,13 @@
                                 </div>
                                 <div class="row my-5 mx-0 p-0">
                                     <div class="col-md-3 mr-3"></div>
-                                    <button id="btnCalcPIT" class="btn col-md-3">Tính thuế thu nhập cá nhân<span>Tính thuế thu nhập cá nhân</span></button>
+                                    <button id="btnCalcPIT" class="btn col-md-3">Tính thuế thu nhập cá nhân<span>Tính
+                                            thuế thu nhập cá nhân</span></button>
                                 </div>
 
                             </div>
                             <div class="pl-5 card-footer">
-                                <h2 id="txtResult__2">Giá trị trung bình:</h2>
+                                <h2 id="txtResult__2">Kết quả: </h2>
                             </div>
                         </div>
                     </div>
@@ -150,16 +151,18 @@
                                 <h2>Tính tiền điện</h2>
                             </div>
                             <div class="pl-5 card-body">
-                                <h4 class="card-title my-4">Tỷ giá USD: 23,500 VND</h4>
-                                <div class="row my-5 m-0">
-                                    <input id="txtExchangeMoney" class="form-control col-md-2" type="number"
-                                        placeholder="Số USD quy đổi" onkeyup="enableButton__3()">
+                                <h4 class="card-title my-4">Nhập vào thông tin tiêu thụ điện</h4>
+                                <div class="row my-5 mx-0 p-0">
+                                    <input id="txtName" class="form-control mr-3 col-md-2" type="text"
+                                        placeholder="Họ và Tên">
+                                    <input id="txtKW" class="form-control mr-3 col-md-2" type="number"
+                                        placeholder="Số Kw điện">
                                 </div>
-                                <button id="btnExchangeMoney" onclick="exchangeMoney()" class="col-md-2 btn"
-                                    disabled>Quy đổi<span>Quy đổi</span></button>
+                                <button id="btnCountElectricMoney" class="col-md-2 btn">Tính tiền điện<span>Tính tiền
+                                        điện</span></button>
                             </div>
                             <div class="pl-5 card-footer">
-                                <h2 id="txtResult__3">Thành tiền: </h2>
+                                <h2 id="txtResult__3">Kết quả: </h2>
                             </div>
                         </div>
                     </div>
@@ -169,25 +172,29 @@
                                 <h2>Tính tiền cáp</h2>
                             </div>
                             <div class="pl-5 card-body">
-                                <h4 class="card-title my-4">Nhập vào chiều dài và chiều rộng</h4>
-                                <div class="row col-md-6 my-5 mx-0 p-0">
-                                    <input id="txtLength" class="mr-3 col-md-3 form-control" type="number"
-                                        placeholder="Chiều dài" onkeyup="enableButton__4()">
-                                    <input id="txtWidth" class="col-md-3 form-control" type="number"
-                                        placeholder="Chiều rộng" onkeyup="enableButton__4()">
+                                <h4 class="card-title my-4">Nhập vào thông tin khách hàng</h4>
+                                <div class="row col-md-12 my-5 mx-0 p-0">
+                                    <div class="form-check col-md-2">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="radioCustomerType" id="radioPersonal"
+                                                value="1" onclick="check()" checked>&nbsp;&nbsp;Cá nhân
+                                        </label>
+                                    </div>
+                                    <div class="form-check col-md-2">
+                                        <label class="form-check-label">
+                                            <input type="radio" class="form-check-input" name="radioCustomerType" id="radioEnterprise"
+                                                value="2" onclick="check()">&nbsp;&nbsp;Doanh nghiệp
+                                        </label>
+                                    </div>
+                                    <input id="txtChannel" class="form-control mr-3 col-md-2" type="text"
+                                        placeholder="Số kênh cao cấp">
+                                    <input id="txtConnection" class="form-control mr-3 col-md-2" type="number"
+                                        placeholder="Số kết nối">
                                 </div>
-                                <div class="row col-md-6 m-0 p-0">
-                                    <button id="btnCountArea" onclick="countArea()" class="col-md-3 mr-3 btn"
-                                        disabled>Tính diện tích<span>Tính diện tích</span></button>
-                                    <button id="btnCountPerimeter" onclick="countPerimeter()" class="col-md-3 btn"
-                                        disabled>Tính chu vi<span>Tính chu vi</span></button>
-                                </div>
+                                <button id="btnCountCost" class="col-md-2 btn">Tính tiền cáp<span>Tính tiền cáp</span></button>
                             </div>
                             <div class="pl-5 card-footer">
-                                <div class="row">
-                                    <h2 id="txtResult__4--1" class="col-md-6">Diện tích HCN: </h2>
-                                    <h2 id="txtResult__4--2" class="col-md-6">Chu vi HCN: </h2>
-                                </div>
+                                <h2 id="txtResult__4">Kết quả: </h2>
                             </div>
                         </div>
                     </div>
@@ -221,7 +228,6 @@
     <script src="./js/baitap_2.js"></script>
     <script src="./js/baitap_3.js"></script>
     <script src="./js/baitap_4.js"></script>
-    <script src="./js/baitap_5.js"></script>
 </body>
 
 </html>
